--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -16,6 +16,10 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
