--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -16,10 +16,7 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
+    permissions: write-all
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
