--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -46,8 +46,5 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
-          MERGE_LABELS: "automerge"
-          MERGE_METHOD: "merge"
-          UPDATE_LABELS: "automerge"
-          UPDATE_METHOD: "merge"
-          MERGE_COMMIT_MESSAGE: pull-request-title
+          mergeLabel: "automerge"
+          mergeMethod: "merge"
