--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -45,6 +45,5 @@ jobs:
         uses: "pascalgn/automerge-action@v0.14.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        with:
-          mergeLabel: "automerge"
-          mergeMethod: "merge"
+          MERGE_LABELS: "automerge"
+          MERGE_METHOD: "merge"
