--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -26,12 +26,14 @@ jobs:
       if: ${{ failure() }}
       env:
         MENSAJE_ERROR: Una o varias pruebas fallaron
-      run: echo "::set-output name=respuesta::${MENSAJE_ERROR}"
+      # run: echo "::set-output name=respuesta::${MENSAJE_ERROR}"
+      run: echo "{name}={MENSAJE_ERROR}" >> $GITHUB_OUTPUT
     - name: Validar resultado sin errores
       if: ${{ success() }}
       env:
         MENSAJE_EXITO: Todas las pruebas fueron exitosas
-      run: echo "::set-output name=respuesta::${MENSAJE_EXITO}"
+      # run: echo "::set-output name=respuesta::${MENSAJE_EXITO}"
+      run: echo "{name}={MENSAJE_EXITO}" >> $GITHUB_OUTPUT
     - name: Cálculo de cubrimiento
       id: cubrimiento
       run: |
