--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -2,9 +2,7 @@ name: Merge y pruebas automáticas
 
 on:
   push:
-    branches-ignore:  # Ignorar ramas main, desarrollo y release
-      - main
-      - release
+    branches: [rama]  # Ignorar ramas main, desarrollo y release
 
 jobs:
   detect-keyword-and-merge:
@@ -34,6 +32,8 @@ jobs:
       run: |
         git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
         git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git checkout dev
+        git pull
         git checkout ${{ github.ref_name }}
         git merge dev # || exit 1  # Si falla el merge, se detiene
 
