--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -18,11 +18,9 @@ jobs:
       run: |
         COMMIT_MESSAGE=$(git log -1 --pretty=%B)
         echo "El mensaje del commit es: $COMMIT_MESSAGE"
-        if grep -q -E "(fix|merge|Merge)" commit_messages.txt; then
-          echo "Commit message contains the required keyword."
-        else
-          echo "Error: Commit message must contain one of the following keywords: fix, update, feature."
-          exit 1
+        if [[ "$COMMIT_MESSAGE" != "merge" ]]; then
+          echo "La palabra clave merge no fue encontrada en el commit. Abortando."
+          exit 0
         fi
     - name: Configuración de entorno de Python
       uses: actions/setup-python@v2
