--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -18,10 +18,11 @@ jobs:
       run: |
         COMMIT_MESSAGE=$(git log -1 --pretty=%B)
         echo "El mensaje del commit es: $COMMIT_MESSAGE"
-        if [[ "$COMMIT_MESSAGE" != "#merge#" ]]; then
+        if [[ "$COMMIT_MESSAGE" != "merge" ]]; then
           echo "La palabra clave merge no fue encontrada en el commit. Abortando."
           exit 0
         fi
+          echo "La palabra clave merge  fue encontrada en el commit.."
     - name: Configuración de entorno de Python
       uses: actions/setup-python@v2
       with:
