--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -29,13 +29,13 @@ jobs:
         python-version: '3.7'
     - name: Merge de la rama desarrollo a feature
       run: |
-        # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
-        # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git fetch origin
         git checkout dev
         git pull
         git checkout ${{ github.ref_name }}
-        git merge dev
-
+        git merge origin/dev
     - name: Ejecutar pruebas unitarias
       run: |
         pip install -r requirements.txt
