--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -61,6 +61,8 @@ jobs:
     - name: Hacer merge de feature a desarrollo si las pruebas pasan
       if: success()
       run: |
+        git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
         git fetch origin
         git checkout dev
         git pull
