--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -27,10 +27,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.7'
-    - name: Merge de la rama desarrollo a feature
+    - name: Generar token
       run: |
         git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
         git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git add .
+        git commit -m "Auto commit from GitHub Actions"
+        git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Merge de la rama desarrollo a feature
+      run: |
+        # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
         git fetch origin
         git checkout dev
         git pull
@@ -61,8 +70,8 @@ jobs:
     - name: Hacer merge de feature a desarrollo si las pruebas pasan
       if: success()
       run: |
-        git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
-        git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
         git fetch origin
         git checkout dev
         git pull
