--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       salida: ${{ steps.imprimir.outputs.respuesta }}
+    permissions: write-all
     steps:
     - name: Checkout del repositorio
       uses: actions/checkout@v2
@@ -27,7 +28,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.7'
-
     - name: Merge de la rama desarrollo a feature
       run: |
         # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
@@ -61,6 +61,8 @@ jobs:
 
     - name: Hacer merge de feature a desarrollo si las pruebas pasan
       if: success()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
       run: |
         # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
         # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
@@ -69,5 +71,3 @@ jobs:
         git pull
         git merge ${{ github.ref_name }} --allow-unrelated-histories
         git push origin dev
-      with:
-        github_token: ${{ secrets.DEPENDABOT_TOKEN }}
