--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -30,8 +30,8 @@ jobs:
         python-version: '3.7'
     - name: Merge de la rama desarrollo a feature
       run: |
-        # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
-        # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
         git fetch origin
         git checkout dev
         git pull
@@ -60,10 +60,10 @@ jobs:
           coverage report -m
 
     - name: Hacer merge de feature a desarrollo si las pruebas pasan
-      if: success()
+      if: ${{ success() }}
       run: |
-        # git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
-        # git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
+        git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
+        git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
         git fetch origin
         git checkout dev
         git pull
