--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         python-version: '3.7'
     - name: Merge de la rama desarrollo a feature
+      if: ${{ success() }}
       run: |
         git config user.name "$(git log -1 --pretty=format:'%an')"  # Recupera el nombre del autor del último commit
         git config user.email "$(git log -1 --pretty=format:'%ae')"  # Recupera el correo del autor del último commit
